[gd_scene load_steps=23 format=3 uid="uid://thc4mpwy6utd"]

[ext_resource type="Script" uid="uid://7l7eibkrx25u" path="res://scenes/game_object/player/player.gd" id="1_sxc8c"]
[ext_resource type="PackedScene" uid="uid://c15x3unpqnu58" path="res://scenes/component/velocity_component.tscn" id="2_43mnt"]
[ext_resource type="PackedScene" uid="uid://clwq7mpdgjsib" path="res://scenes/component/health_component.tscn" id="3_lbq7i"]
[ext_resource type="PackedScene" uid="uid://cph6t02p6slry" path="res://scenes/manager/visual_effects_manager.tscn" id="4_kqv1d"]
[ext_resource type="PackedScene" uid="uid://qtwxx6cwvifg" path="res://scenes/ability/sword_ability_controller/sword_ability_controller.tscn" id="5_km47r"]
[ext_resource type="Texture2D" uid="uid://d0yat6qxu4shp" path="res://assets/characters/palladin/palladins-shadow.png" id="6_rhvg1"]
[ext_resource type="Texture2D" uid="uid://7fcmpvfpnfbs" path="res://assets/characters/palladin/character-palladin-24.png" id="7_sxc8c"]
[ext_resource type="AudioStream" uid="uid://cqvkhq48hsohd" path="res://assets/audio/player/hurt1.ogg" id="8_xxsey"]
[ext_resource type="AudioStream" uid="uid://bf4dfr5kxh7gn" path="res://assets/audio/player/hurt2.ogg" id="9_o7fbb"]
[ext_resource type="AudioStream" uid="uid://ck63f16ujdcmf" path="res://assets/audio/player/hurt4.ogg" id="10_urtol"]
[ext_resource type="AudioStream" uid="uid://y7ed5poyihn3" path="res://assets/audio/player/hurt3.ogg" id="11_1rg1w"]
[ext_resource type="AudioStream" uid="uid://cisgrrrxo6bxh" path="res://assets/audio/player/footstep_concrete_001.ogg" id="12_sx22l"]
[ext_resource type="AudioStream" uid="uid://c8ebe6m0tqijk" path="res://assets/audio/player/footstep_concrete_002.ogg" id="13_lrdhe"]

[sub_resource type="Animation" id="Animation_rix40"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Character:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Character:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Character:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/Shadow:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0.75000006)]
}

[sub_resource type="Animation" id="Animation_pknkg"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Character:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -3), Vector2(0, 0), Vector2(0, -3), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Character:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [-0.261799, 0.0, 0.261799, 0.0, -0.261799]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Character:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1), Vector2(1, 0.8)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/Shadow:scale")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 0.75000006), Vector2(1, 0.5), Vector2(1, 0.75), Vector2(1, 0.5), Vector2(1, 0.75000006)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rix40"]
_data = {
&"RESET": SubResource("Animation_rix40"),
&"walk": SubResource("Animation_pknkg")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_rix40"]
light_mode = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_s3670"]
radius = 37.4833

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sxc8c"]
radius = 6.0
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tj6oj"]
radius = 8.0
height = 16.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_l1g56"]
streams_count = 4
stream_0/stream = ExtResource("8_xxsey")
stream_1/stream = ExtResource("9_o7fbb")
stream_2/stream = ExtResource("10_urtol")
stream_3/stream = ExtResource("11_1rg1w")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_llc7q"]
streams_count = 2
stream_0/stream = ExtResource("12_sx22l")
stream_1/stream = ExtResource("13_lrdhe")

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_sxc8c")

[node name="VelocityComponent" parent="." instance=ExtResource("2_43mnt")]
max_speed = 90
acceleration = 25.0

[node name="HealthComponent" parent="." instance=ExtResource("3_lbq7i")]
unique_name_in_owner = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_rix40")
}

[node name="VisualEffectsManager" parent="." node_paths=PackedStringArray("player_sprite") instance=ExtResource("4_kqv1d")]
player_sprite = NodePath("../Visuals/Character")

[node name="Abilities" type="Node" parent="."]
unique_name_in_owner = true

[node name="SwordAbilityController" parent="Abilities" instance=ExtResource("5_km47r")]

[node name="DamageIntervalTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
light_mask = 3
z_index = 10
texture_filter = 1
material = SubResource("CanvasItemMaterial_rix40")
custom_minimum_size = Vector2(32, 1)
offset_left = -16.0
offset_top = -31.0
offset_right = 16.0
offset_bottom = -29.0
pivot_offset = Vector2(16, 1)
theme_type_variation = &"HealthBar"
max_value = 1.0
value = 0.5
show_percentage = false

[node name="PickupArea2D" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
scale = Vector2(1, 0.5)
shape = SubResource("CircleShape2D_s3670")

[node name="Visuals" type="Node2D" parent="."]

[node name="Shadow" type="Sprite2D" parent="Visuals"]
position = Vector2(0, -2.9802322e-08)
scale = Vector2(1, 0.75000006)
texture = ExtResource("6_rhvg1")

[node name="Character" type="Sprite2D" parent="Visuals"]
light_mask = 3
texture = ExtResource("7_sxc8c")
offset = Vector2(0, -12)
metadata/_aseprite_wizard_interface_config_ = {
"layer_section": false,
"pending_changes": {
"embed_tex": true,
"i_mode": 0,
"keep_anim_length": false,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "",
"slice": "",
"source": "",
"source_uid": -1
},
"slice_section": false
}

[node name="EnemiesCollisionArea2D" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemiesCollisionArea2D"]
position = Vector2(0, -9)
shape = SubResource("CapsuleShape2D_sxc8c")
debug_color = Color(0.493546, 0.290663, 0.962781, 0.42)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -8)
shape = SubResource("CapsuleShape2D_tj6oj")

[node name="HitAudioPlayer2D" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_l1g56")

[node name="WalkAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_llc7q")
volume_db = -8.0
bus = &"environment"
